writing the basics

--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,14 @@
 <body unresolved>
 
   <div class="wrapper">
+    <h2>Clock (no params)</h2>
     <flip-clock></flip-clock>
+
+    <h2>Timer </h2>
+    <flip-clock displayMode="timer" toggleButton="true" resetButton="true"></flip-clock>
+
+    <h2>Countdown </h2>
+    <flip-clock displayMode="countdown" startFrom="20" toggleButton="true" resetButton="true"></flip-clock>
   </div>
 
 </body>
