--- a/flip-clock.html
+++ b/flip-clock.html
@@ -13,7 +13,7 @@ A flip clock, timer and countdown made with Polymer
 @status alpha
 @homepage http://Granze.github.io/flip-clock
 -->
-<polymer-element name="flip-clock" attributes="displayMode toggleButton resetButton showSeconds startFrom">
+<polymer-element name="flip-clock" attributes="displayMode toggleButton resetButton showSeconds startFrom auto">
 
   <template>
 
@@ -33,11 +33,15 @@ A flip clock, timer and countdown made with Polymer
       </div>
 
       <template if="{{toggleButton && displayMode !== 'clock'}}">
-        <button class="toggle btn">Start/Stop</button>
+        <button class="toggle btn" on-click="{{startCount}}" disabled?="{{isRunning}}">Start</button>
+      </template>
+
+      <template if="{{toggleButton && displayMode !== 'clock'}}">
+        <button class="toggle btn" on-click="{{stopCount}}">Stop</button>
       </template>
 
       <template if="{{resetButton && displayMode !== 'clock'}}">
-        <button class="reset btn">Reset</button>
+        <button class="reset btn" on-click="{{resetCount}}">Reset</button>
       </template>
 
     </content>
@@ -83,6 +87,12 @@ A flip clock, timer and countdown made with Polymer
 
       startFrom: null,
 
+      timer: null,
+
+      auto: true,
+
+      isRunning: false,
+
       /**
        * The `createClock` method start a clock that display the current time.
        *
@@ -101,6 +111,10 @@ A flip clock, timer and countdown made with Polymer
        * @return {Object} Returns undefined.
        */
       createTimer: function() {
+        if(this.isRunning) {
+          this.time = this.timer.add('s', 1).format('HHmmss');
+          this.async(this.createTimer, null, 1000);
+        }
       },
 
       /**
@@ -118,7 +132,11 @@ A flip clock, timer and countdown made with Polymer
        * @return {Object} Returns undefined.
        */
       startCount: function() {
-
+        if(!this.timer) {
+          this.timer = moment().hours(0).minutes(0).seconds(0);
+        }
+        this.isRunning = true;
+        this.createTimer();
       },
 
       /**
@@ -128,7 +146,7 @@ A flip clock, timer and countdown made with Polymer
        * @return {Object} Returns undefined.
        */
       stopCount: function() {
-
+        this.isRunning = false;
       },
 
       /**
@@ -138,18 +156,23 @@ A flip clock, timer and countdown made with Polymer
        * @return {Object} Returns undefined.
        */
       resetCount: function() {
-
+        this.time = '000000';
+        this.timer = null;
       },
       created: function() {
-        this.time = '000000';
+        this.resetCount();
       },
       ready: function() {
         switch(this.displayMode) {
           case 'timer':
-            this.createTimer();
+            if(this.auto === true) {
+              this.startCount();
+            }
             break;
           case 'countdown':
-            this.createCountdown();
+            if(this.auto === true) {
+              this.createCountdown();
+            }
             break;
           default:
             this.createClock();
