--- a/demo.html
+++ b/demo.html
@@ -8,12 +8,28 @@
   <link rel="import" href="flip-clock.html">
   <style>
     body {
+      font-family: Arial, Helvetica, sans-serif;
+      color: #333;
       background: #ccc;
     }
+    h2 {
+      font-size: 34px;
+      margin: 30px 0 10px;
+    }
     .wrapper {
-      width: 800px;
+      width: 960px;
       margin: 100px auto 0 auto;
       text-align: center;
+    }
+    code {
+      display: inline-block;
+      margin: 0 0 20px 0;
+      font-family: monospace , serif;
+      border: 1px solid #ddd;
+      background-color: #f8f8f8;
+      border-radius: 3px;
+      padding: 2px 4px;
+      color: #333;
     }
   </style>
 
@@ -21,14 +37,17 @@
 <body unresolved>
 
   <div class="wrapper">
-    <h2>Clock (no params)</h2>
+    <h2>Clock</h2>
+    <code>&lt;flip-clock&gt;&lt;/flip-clock&gt;</code>
     <flip-clock></flip-clock>
 
     <h2>Timer </h2>
-    <flip-clock displayMode="timer" toggleButton="true" resetButton="true"></flip-clock>
+    <code>&lt;flip-clock displayMode=&quot;timer&quot; commandButtons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
+    <flip-clock displayMode="timer" commandButtons="true"></flip-clock>
 
     <h2>Countdown </h2>
-    <flip-clock displayMode="countdown" startFrom="20" toggleButton="true" resetButton="true"></flip-clock>
+    <code>&lt;flip-clock displayMode=&quot;countdown&quot; startFrom=&quot;20&quot; commandButtons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
+    <flip-clock displayMode="countdown" startFrom="20" commandButtons="true"></flip-clock>
   </div>
 
 </body>
