--- a/flip-clock.html
+++ b/flip-clock.html
@@ -13,13 +13,14 @@ A flip clock, timer and countdown made with Polymer
 @status alpha
 @homepage http://Granze.github.io/flip-clock
 -->
-<polymer-element name="flip-clock" attributes="displayMode toggleButton resetButton showSeconds startFrom auto">
+<polymer-element name="flip-clock" attributes="displayMode commandButtons showSeconds startFrom auto">
 
   <template>
 
     <link rel="stylesheet" href="flip-clock.css" />
 
     <content>
+
       <div id="clock">
         <span id="hours0">{{time[0]}}</span><span id="hours1">{{time[1]}}</span>
         <b>:</b>
@@ -32,15 +33,9 @@ A flip clock, timer and countdown made with Polymer
 
       </div>
 
-      <template if="{{toggleButton && displayMode !== 'clock'}}">
+      <template if="{{commandButtons && displayMode !== 'clock'}}">
         <button class="toggle btn" on-click="{{startCount}}" disabled?="{{isRunning}}">Start</button>
-      </template>
-
-      <template if="{{toggleButton && displayMode !== 'clock'}}">
         <button class="toggle btn" on-click="{{stopCount}}">Stop</button>
-      </template>
-
-      <template if="{{resetButton && displayMode !== 'clock'}}">
         <button class="reset btn" on-click="{{resetCount}}">Reset</button>
       </template>
 
@@ -52,7 +47,7 @@ A flip clock, timer and countdown made with Polymer
 
     Polymer('flip-clock', {
       /**
-       * The `displayMode` attribute determine which kind of clock to display.
+       * The `displayMode` attribute determine the kind of clock to display.
        *
        * @attribute displayMode
        * @type string
@@ -62,26 +57,19 @@ A flip clock, timer and countdown made with Polymer
       displayMode: 'clock',
 
       /**
-       * Display a start/stop button in countdown and timer mode.
+       * Display start/stop and reset buttons
        *
-       * @attribute toggleButton
+       * @attribute commandButtons
        * @type bool
        */
-      toggleButton: false,
-
-      /**
-       * Display a reset button in countdown and timer mode.
-       *
-       * @attribute resetButton
-       * @type bool
-       */
-      resetButton: false,
+      commandButtons: false,
 
       /**
        * Show or hide seconds
        *
        * @attribute showSeconds
        * @type bool
+       * @default true
        */
       showSeconds: true,
 
@@ -90,8 +78,18 @@ A flip clock, timer and countdown made with Polymer
        *
        * @attribute startFrom
        * @type int
+       * @default 0
        */
-      startFrom: 0,
+      startFrom: null,
+
+      /**
+       * String containing the digits displayed in the flip clock
+       *
+       * @attribute time
+       * @type string
+       * @default '000000'
+       */
+      time: '000000',
 
       /**
        * Set the hours, minutes and seconds in the timer
@@ -159,12 +157,10 @@ A flip clock, timer and countdown made with Polymer
        */
       startCount: function() {
         if(!this.timer) {
-          if(!this.startFrom) {
-            this.timer = moment().hours(0).minutes(0).seconds(0);
-          }
+          this.timer = moment().hours(0).minutes(this.startFrom || 0).seconds(0);
         }
         this.isRunning = true;
-        this.createCountdown();
+        this.startFrom ? this.createCountdown() : this.createTimer();
       },
 
       /**
@@ -182,7 +178,8 @@ A flip clock, timer and countdown made with Polymer
        * @method resetCount
        */
       resetCount: function() {
-        this.time = '000000';
+        this.isRunning = false;
+        this.time = this.startFrom ? '00' + this.startFrom + '00' : '000000';
         this.timer = null;
       },
       created: function() {
