minor changes before first release

--- a/flip-clock.html
+++ b/flip-clock.html
@@ -78,7 +78,7 @@ A flip clock, timer and countdown made with Polymer
        *
        * @attribute startFrom
        * @type int
-       * @default 0
+       * @default null
        */
       startFrom: null,
 
