--- a/demo.html
+++ b/demo.html
@@ -56,11 +56,11 @@
 
     <h2>Timer </h2>
     <code>&lt;flip-clock displayMode=&quot;timer&quot; commandButtons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
-    <flip-clock displayMode="timer" commandButtons="true"></flip-clock>
+    <flip-clock display-mode="timer" command-buttons="true"></flip-clock>
 
     <h2>Countdown </h2>
     <code>&lt;flip-clock displayMode=&quot;countdown&quot; startFrom=&quot;20&quot; commandButtons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
-    <flip-clock displayMode="countdown" startFrom="20" commandButtons="true"></flip-clock>
+    <flip-clock display-mode="countdown" start-from="20" command-buttons="true"></flip-clock>
   </div>
 
   <p class="center"><a href="https://github.com/Granze/flip-clock">Source code on Github</a> | Follow me on twitter <a href="https://twitter.com/granze">@granze</a></p>
