--- a/demo.html
+++ b/demo.html
@@ -52,14 +52,14 @@
   <div class="wrapper">
     <h2>Clock</h2>
     <code>&lt;flip-clock&gt;&lt;/flip-clock&gt;</code>
-    <flip-clock></flip-clock>
+    <flip-clock show-seconds="false"></flip-clock>
 
     <h2>Timer </h2>
-    <code>&lt;flip-clock displayMode=&quot;timer&quot; commandButtons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
+    <code>&lt;flip-clock display-mode=&quot;timer&quot; command-buttons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
     <flip-clock display-mode="timer" command-buttons="true"></flip-clock>
 
     <h2>Countdown </h2>
-    <code>&lt;flip-clock displayMode=&quot;countdown&quot; startFrom=&quot;20&quot; commandButtons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
+    <code>&lt;flip-clock display-mode=&quot;countdown&quot; start-from=&quot;20&quot; command-buttons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
     <flip-clock display-mode="countdown" start-from="20" command-buttons="true"></flip-clock>
   </div>
 
