--- a/flip-clock.html
+++ b/flip-clock.html
@@ -15,72 +15,76 @@ A flip clock, timer and countdown made with Polymer
 
 -->
 <dom-module id="flip-clock">
+  <style>
+    :host {
+      display: block;
+    }
+    #clock {
+      font-size: 0;
+      font-family: Arial, Verdana, sans-serif;
+      font-weight: bold;
+    }
+    #clock * {
+      font-size: 70px;
+    }
+    #clock span {
+      position: relative;
+      display: inline-block;
+      margin-right: 10px;
+      padding: 5px 15px;
+      border-radius: 4px;
+      color: #fff;
+      box-shadow: 1px 1px 1px #555;
+      background-color: #333;
+      background: -webkit-linear-gradient(top, #333 0%, #444 50%, #333 51%, #222 100%);
+      background: linear-gradient(to bottom, #333 0%,#444 50%,#333 51%,#222 100%);
+    }
+    #clock span:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 100%;
+      height: 3px;
+      background-color: #111;
+    }
+    #clock b {
+      color: #333;
+      margin-right: 10px;
+    }
+    .btn {
+      margin: 20px 10px 10px 10px;
+      padding: 5px 10px;
+      border: 1px solid #000;
+      border-radius: 2px;
+      cursor: pointer;
+      color: #dedede;
+      background-color: #333;
+    }
+    .btn[disabled] {
+      opacity: .5;
+    }
+    .hide-and-seek {
+      display: none;
+    }
+    .hide-and-seek[show] {
+      display: inline;
+    }
+  </style>
   <template>
-    <style>
-      :host {
-        display: block;
-      }
-      #clock {
-        font-size: 0;
-        font-family: Arial, Verdana, sans-serif;
-        font-weight: bold;
-      }
-      #clock * {
-        font-size: 70px;
-      }
-      #clock > span {
-        position: relative;
-        display: inline-block;
-        margin-right: 10px;
-        padding: 5px 15px;
-        border-radius: 4px;
-        color: #fff;
-        box-shadow: 1px 1px 1px #555;
-        background-color: #333;
-        background: -webkit-linear-gradient(top, #333 0%, #444 50%, #333 51%, #222 100%);
-        background: linear-gradient(to bottom, #333 0%,#444 50%,#333 51%,#222 100%);
-      }
-      #clock > span:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 50%;
-        width: 100%;
-        height: 3px;
-        background-color: #111;
-      }
-      #clock > b {
-        color: #333;
-        margin-right: 10px;
-      }
-      .btn {
-        margin: 20px 10px 10px 10px;
-        padding: 5px 10px;
-        border: 1px solid #000;
-        border-radius: 2px;
-        cursor: pointer;
-        color: #dedede;
-        background-color: #333;
-      }
-    </style>
-
     <div id="clock">
       <span id="hours0">{{time.0}}</span><span id="hours1">{{time.1}}</span>
-      <b>:</b>
-      <span id="minutes0">{{time.2}}</span><span id="minutes1">{{time.3}}</span>
-
-      <!--template if="showSeconds"-->
-        <b>:</b>
-        <span id="seconds0">{{time.4}}</span><span id="seconds1">{{time.4}}</span>
-      <!--/template-->
+      <b>:</b><span id="minutes0">{{time.2}}</span><span id="minutes1">{{time.3}}</span>
+      <div class="hide-and-seek" show$="{{showSeconds}}">
+        <b>:</b><span id="seconds0">{{time.4}}</span><span id="seconds1">{{time.5}}</span>
+      </div>
 
     </div>
-
-    <!--template if="commandButtons && displayMode !== 'clock'"-->
-      <button class="toggle btn" on-click="startCount" disabled$="isRunning">Start</button>
+    <div class="hide-and-seek" show$="{{commandButtons}}">
+      <button class="toggle btn" on-click="startCount" disabled$="{{isRunning}}">Start</button>
       <button class="toggle btn" on-click="stopCount">Stop</button>
       <button class="reset btn" on-click="resetCount">Reset</button>
-    <!--/template-->
+    </div>
   </template>
 </dom-module>
 
@@ -88,17 +92,19 @@ A flip clock, timer and countdown made with Polymer
   Polymer({
     is: 'flip-clock',
 
-    hostAttributes: {
-      time: '000000',
-      timer: null
-    },
-
     properties: {
+      time: {
+        value: '000000'
+      },
+      timer: {
+        value: null
+      },
       displayMode: {
         type: String
       },
       commandButtons: {
-        type: Boolean
+        type: Boolean,
+        value: false
       },
       showSeconds: {
         type: Boolean,
@@ -107,9 +113,6 @@ A flip clock, timer and countdown made with Polymer
       startFrom: {
         type: Number,
         value: null
-      },
-      auto: {
-        type: Boolean
       }
     },
     /**
@@ -118,16 +121,8 @@ A flip clock, timer and countdown made with Polymer
      * @method createClock
      */
     createClock: function() {
-      this.updateClock();
-      setInterval(this.updateClock.bind(this), 1000);
-    },
-
-    updateClock: function() {
       this.time = moment().format('HHmmss');
-    },
-
-    updateTimer: function() {
-      this.time = this.timer.add(1, 's').format('HHmmss');
+      this.async(this.createClock, 1000);
     },
     /**
      * The `createTimer` method create a timer
@@ -136,11 +131,10 @@ A flip clock, timer and countdown made with Polymer
      */
     createTimer: function() {
       if(this.isRunning) {
-        this.updateTimer();
-        setInterval(this.updateTimer.bind(this), 1000);
+        this.time = this.timer.add(1, 's').format('HHmmss');
+        this.async(this.createTimer, 1000);
       }
     },
-
     /**
      * The `createCountdown` method create a countdown
      *
@@ -150,12 +144,12 @@ A flip clock, timer and countdown made with Polymer
       if(this.isRunning) {
         if(this.time > 0) {
           this.time = this.timer.subtract(1, 's').format('HHmmss');
-          this.async(this.createCountdown, null, 1000);
+          this.async(this.createCountdown, 1000);
         }
       }
     },
     /**
-     * The `startCount` method does no work at this time.
+     * The `startCount` method
      *
      * @method startCount
      */
@@ -166,7 +160,6 @@ A flip clock, timer and countdown made with Polymer
       this.isRunning = true;
       this.startFrom ? this.createCountdown() : this.createTimer();
     },
-
     /**
      * The `stopCount` stop the running timer or countdown
      *
@@ -175,7 +168,6 @@ A flip clock, timer and countdown made with Polymer
     stopCount: function() {
       this.isRunning = false;
     },
-
     /**
      * The `resetCount` reset che counter
      *
@@ -188,7 +180,8 @@ A flip clock, timer and countdown made with Polymer
     },
 
     ready: function() {
-      console.log(this);
+      this.resetCount();
+
       switch(this.displayMode) {
         case 'timer':
           if(this.auto === true) {
