--- a/flip-clock.html
+++ b/flip-clock.html
@@ -149,7 +149,7 @@ A flip clock, timer and countdown made with Polymer
       }
     },
     /**
-     * The `startCount` method
+     * The `startCount` method starts the timer or the countdown
      *
      * @method startCount
      */
