working 0.8 flip clock

--- a/demo.html
+++ b/demo.html
@@ -63,15 +63,15 @@
   <div class="wrapper">
     <h2>Clock</h2>
     <code>&lt;flip-clock&gt;&lt;/flip-clock&gt;</code>
-    <flip-clock show-seconds="false"></flip-clock>
+    <flip-clock></flip-clock>
 
     <h2>Timer </h2>
     <code>&lt;flip-clock display-mode=&quot;timer&quot; command-buttons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
-    <flip-clock display-mode="timer" command-buttons="true"></flip-clock>
+    <flip-clock display-mode="timer" show-buttons></flip-clock>
 
     <h2>Countdown </h2>
     <code>&lt;flip-clock display-mode=&quot;countdown&quot; start-from=&quot;20&quot; command-buttons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
-    <flip-clock display-mode="countdown" start-from="20" command-buttons="true"></flip-clock>
+    <flip-clock display-mode="countdown" start-from="20" show-buttons></flip-clock>
   </div>
 </body>
 </html>
