demo description corrected

--- a/demo.html
+++ b/demo.html
@@ -66,11 +66,11 @@
     <flip-clock></flip-clock>
 
     <h2>Timer </h2>
-    <code>&lt;flip-clock display-mode=&quot;timer&quot; command-buttons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
+    <code>&lt;flip-clock display-mode=&quot;timer&quot; show-buttons&gt;&lt;/flip-clock&gt;</code>
     <flip-clock display-mode="timer" show-buttons></flip-clock>
 
     <h2>Countdown </h2>
-    <code>&lt;flip-clock display-mode=&quot;countdown&quot; start-from=&quot;20&quot; command-buttons=&quot;true&quot;&gt;&lt;/flip-clock&gt;</code>
+    <code>&lt;flip-clock display-mode=&quot;countdown&quot; start-from=&quot;20&quot; show-buttons&gt;&lt;/flip-clock&gt;</code>
     <flip-clock display-mode="countdown" start-from="20" show-buttons></flip-clock>
   </div>
 </body>
