--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="../polymer/polymer.html">
-  <link rel="import" href="../core-component-page/core-component-page.html">
+  <link rel="import" href="../iron-doc-viewer/iron-doc-viewer.html">
 
 </head>
-<body unresolved>
+<body>
 
-  <core-component-page></core-component-page>
+  <iron-doc-viewer></iron-doc-viewer>
 
 </body>
 </html>
