--- a/demo/index.html
+++ b/demo/index.html
@@ -4,8 +4,8 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>flip-clock Demo</title>
   <link href="//fonts.googleapis.com/css?family=RobotoDraft:300,400,500" rel="stylesheet">
-  <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
-  <link rel="import" href="flip-clock.html">
+  <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+  <link rel="import" href="../flip-clock.html">
   <style>
     body {
       margin: 0;
@@ -38,7 +38,7 @@
       background-color: #536dfe;
     }
     .wrapper {
-      width: 960px;
+      max-width: 960px;
       margin: 20px auto 0 auto;
       text-align: center;
     }
