change dir structure

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <title>flip-clock Demo</title>
   <link href="//fonts.googleapis.com/css?family=RobotoDraft:300,400,500" rel="stylesheet">
-  <script src="../../webcomponentsjs/webcomponents-lite.min.js"></script>
+  <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../flip-clock.html">
   <style>
     body {
