--- a/flip-clock.html
+++ b/flip-clock.html
@@ -1,5 +1,4 @@
-<!-- link rel="import" href="../polymer/polymer.html" -->
-<link rel="import" href="https://rawgit.com/polymer/polymer/0.8-preview/polymer.html">
+<link rel="import" href="../polymer/polymer.html">
 <script src="../moment/moment.js"></script>
 
 <!--
