--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
   <script src="../webcomponentsjs/webcomponents-lite.min.js"></script>
   <link rel="import" href="../polymer/polymer.html">
-  <link rel="import" href="../iron-doc-viewer/iron-doc-viewer.html">
+  <link rel="import" href="../iron-component-page/iron-component-page.html">
 
 </head>
 <body>
 
-  <iron-doc-viewer></iron-doc-viewer>
+  <iron-component-page></iron-component-page>
 
 </body>
 </html>
